# VP-Tree-Database

./: .gitignore  Cargo.toml  README.md  building_open_cv.md  package.json
Server/: database_interface.js  server.js  shared.js
Server/UI/: index.html
UI/: index.html  opencv.js
VP-Tree-Database/: Cargo.toml
VP-Tree-Database/src/: constants.rs  extract_from_image.rs  frame_info.rs  main.rs  python_binary.rs
VP-Tree-Database/src/feature_tree/: file_node.rs
src/: constants.rs  features.rs  features_database.rs  frame_info.rs  main.rs  metadata_database.rs
src/feature_tree/: file_node.rs  internal_node.rs  leaf_node.rs  node.rs  node_path.rs  search_result.rs
